tests/NormalTests/paczka1/small_fuzzy/87394037.err
Error in line 4: 6g7s A409 91,6
Error in line 14: 6g7s A672 31,5
